<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    xmlns:app="http://schemas.android.com/apk/res-auto"
                                    app:cardCornerRadius="15sp"
                                    android:id="@+id/card1_accuille"
>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:weightSum="2"
                  android:orientation="vertical">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
            <ImageView
                    android:id="@+id/news_image"
                    android:layout_width="match_parent"
                    android:layout_height="173dp"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:weightSum="3"
                android:orientation="vertical">
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="0dp"
                          android:layout_weight="1">
                <TextView
                        android:text="@string/classemnt_example"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:textSize="14sp"
                        android:textStyle="bold"/>
                <ImageView
                        android:id="@+id/logo_icon"
                        android:layout_width="50dp"
                        android:layout_height="28dp"
                        android:layout_gravity="center"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"

                    android:layout_weight="1">
                <TextView
                        android:text="@string/titre_news"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textSize="17sp"
                        android:id="@+id/titre_news"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:weightSum="12">
                <TextView
                        android:id="@+id/cadr1_date"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="6"
                        android:text="@string/a_la_une_il_y_a_5heurs"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:textSize="12sp"/>
                <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="6"
                        android:layout_gravity="center">
                    <ImageView
                            android:id="@+id/card1_menu"
                            android:layout_width="21dp"
                            android:layout_height="24dp"
                            android:src="@drawable/menu_black"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:layout_marginRight="13dp"
                            android:layout_marginEnd="13dp"
                    />
                    <ImageView
                            android:id="@+id/card1_newspaper"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/ic_save"
                            android:tag="nonSuivi"
                            android:layout_toStartOf="@+id/card1_menu" android:layout_marginRight="4dp"
                            android:layout_marginEnd="4dp" android:layout_toLeftOf="@+id/card1_menu"/>
                </RelativeLayout>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>